Updating About page
Finish building desktop version of an about page

--- a/index.html
+++ b/index.html
@@ -245,94 +245,12 @@
 
 
 
-        <div class="badges-contenedor">
-          <span class="badge text-bg-danger">Join to our 2023 program, right now!!!</span>
+        <div class="badges-contenedor text-center">
+          <span class="badge  text-bg-danger">Join to our 2023 program, right now!!!</span>
         </div>
       </div>
 
     </div>
-
-
-
-    <div class="more-desktop">
-      <div class="container text-enter about-main-programs">
-
-        <div class="speaker-content1">
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker1.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>Yochai Benkler</h2>
-              <p class="about-title2">Berkman Professor of Entrepreneurial Legal Studies at Harvard Law School</p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker2.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>SohYeong Noh</h2>
-              <p class="about-title2">Director of Art Centre Nabi and a board member of CC </p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker3.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>Lila Tretikov</h2>
-              <p class="about-title2">Executive Director of the Wikimedia Foundation</p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="speaker-content2">
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker4.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>Kilnam Chon</h2>
-              <p class="about-title2">Web Page programmer</p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker5.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>Julia Leda</h2>
-              <p class="about-title2">President of Young Pirates of Europe</p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-
-          <div class="column2 ">
-            <i><img class="speaker" src="./images/speaker6.png" alt=""></i>
-            <div class="speaker-content">
-              <h2>Ryan Merkley</h2>
-              <p class="about-title2">CEO of Creative Commons, ex COO of the Mozilla Foundation</p>
-              <hr>
-              <p class="about-content">Benkler studies commons-bades peer production, and published his semnial book The
-                Wealth of Networks in 2006.</p>
-            </div>
-
-          </div>
-        </div>
-
 
 
 
