--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <a href="https://twitter.com/?lang=es"><i class="bi bi-twitter"></i></a>
       <a href="about.html">Logout</a>
       <a href="#about">Mypage</a>
-      <a href="#contact">Korean</a>
+      <a href="#contact">English</a>
     </div>
 
     
