--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
           aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="./images/Logo.png" alt=""></h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><a href="index.html"><img src="./images/Logo.png" alt=""></a>  </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -80,7 +80,7 @@
 
   </nav>
   <nav class="nav-desktop ">
-    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="./images/Logo.png" alt=""></h5>
+    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"> <a href="index.html"><img src="./images/Logo.png" alt=""></a> </h5>
     <a href="#portfolio">About </a>
     <a href="#about">Program</a>
     <a href="#contact">Join</a>
@@ -94,7 +94,7 @@
     <div class="container-md cocogoose">
     
       <div class="margin-text1">
-        <h1 class="h1-intro">Web Programming course's for everyone 2023</h1>
+        <h1 class="h1-intro">WEB PROGRAMMING COURSE'S FOR EVERYONE 2023</h1>
       </div>
       
     </div>
@@ -144,11 +144,11 @@
         <p class="text-center p-intro2"> Take a look at the last two CC Global Summits which took place</p>
         <p class="text-center p-intro2">in Buenos Aires and in Warsaw.</p>
 <div class="images-desktop">
-    <div>
+    <div class="images-desktop2">
         <img class="logo-img3"  src="./images/picture1.png" alt="">
     </div>
 
-    <div>
+    <div class="images-desktop2">
         <img class="logo-img3"  src="./images/picture2.png" alt="">
     </div>
 </div>
@@ -158,14 +158,26 @@
 
 </section>
 
-<section>
-    <img class="logo-img" src="./images/picture3.png" alt="">
-</section>
-
-<section>
-  <img class="logo-img2" src="./images/picture5.png" alt="">
-</section>
-
+<footer>
+  <div class="footer-first2">
+      <h3>Partner</h3>
+      <hr>
+      <div class="sponsor2">
+          <a href="#"><img src="./images/mozilla 1.png" alt="mozilla"></a>
+          <a href="#"><img src="./images/googlekorea 1.png" alt="google"></a>
+          <a href="#"><img src="./images/naver 1.png" alt="naver"></a>
+          <a href="#"><img src="./images/daumkakaologo 1.png" alt="daumkakao"></a>
+          <a href="#"><img src="./images/airbnb 1.png" alt="airbnb"></a>
+      </div>
+  </div>
+  <div class="footer-second2">
+      <img src="./images/cck-logo1 1.png" alt=""class="mobile-img">
+      <img src="./images/cck-logo1 1 (1).png" alt="" class="footer-img">
+      <p>2023 Creative Commons Korea. Some Rights Reserved.</p>
+      <p id="desktop-p">달리 정하지 않은 웹사이트의 모든 내용은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다.
+          자세한 이용기능 내용과 허락조건은 http://creativecommons.org/licences/by/2.0/kr 를 보세요.</p>
+  </div>
+</footer>
 
 
   
