--- a/index.html
+++ b/index.html
@@ -192,7 +192,31 @@
 
   <section class="featured-speakers" id="featured-speakers">
  <!-- dynamic section -->
+ <div >
+  <ul class="speakers-ul" id="speakers-ul">
+      
+  </ul>
+</div>
   </section>
+  <div class="accordion" id="accordionExample">
+
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          More
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
   <footer class="footer">
     <div class="footer-first">
          <div class="main-title">
